[gd_scene load_steps=5 format=3 uid="uid://c7513a7rs01dc"]

[ext_resource type="Script" uid="uid://hq8rl5hp5400" path="res://Objects/interactable.gd" id="1_5jr8t"]
[ext_resource type="Texture2D" uid="uid://br2p4lmwbkxow" path="res://Resources/Raven_Fantasy_Icons/fb94.png" id="2_7dw5s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5jr8t"]
radius = 40.0

[sub_resource type="LabelSettings" id="LabelSettings_5jr8t"]
font_size = 32
font_color = Color(0.881937, 0.881937, 0.881937, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Letter" type="Node2D"]
z_index = -1
script = ExtResource("1_5jr8t")
configFileResource = "res://Files/letter.cfg"
sections = PackedStringArray("letter_start")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7dw5s")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5jr8t")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InteractionLabel" type="Label" parent="Control"]
visible = false
z_index = 1
layout_mode = 0
offset_left = -24.0
offset_top = -80.0
offset_right = 24.0
offset_bottom = -35.0
text = "E"
label_settings = SubResource("LabelSettings_5jr8t")
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
